...

abstract class ProductControllerBase with Store {
  //Lista de produtos iniciais
  @observable
  ObservableList<ProductStore> listPrduct = ObservableList<ProductStore>.of([
    ProductStore(
      name: 'Produto 1',
      price: 20.0,
    ),
    ProductStore(
      name: 'Produto 2',
      price: 15.0,
    ),
  ]);

  //Edit
  final nameController = TextEditingController();
...
